--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,10 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^6.3.1|^7.0.1",
         "laravel/framework": "^7.29",
+        "laravel/passport": "^9.4",
         "laravel/tinker": "^2.5",
-        "laravel/ui": "^2.5",
         "laravelcollective/html": "^6.3",
+        "spatie/laravel-permission": "^5.3",
         "yajra/laravel-datatables-oracle": "^9.21"
     },
     "require-dev": {
